done : stt and tts
